# hiop

./: .gitlab-ci.yml  BUILD.sh  CMakeLists.txt
scripts/: fullBuildMatrix.sh
src/Drivers/: CMakeLists.txt  nlpMDSForm_raja_ex4.cpp  nlpMDSForm_raja_ex4.hpp  nlpMDS_ex4_raja_driver.cpp  nlpMDS_ex5_driver.cpp
src/LinAlg/: hiopLinAlgFactory.cpp  hiopLinAlgFactory.hpp  hiopLinSolver.hpp  hiopLinSolverIndefDenseLapack.hpp  hiopLinSolverIndefDenseMagma.cpp  hiopMatrixMDS.hpp  hiopMatrixRajaDense.cpp  hiopMatrixRajaSparseTriplet.cpp  hiopMatrixRajaSparseTriplet.hpp  hiopMatrixSparse.hpp  hiopMatrixSparseTriplet.cpp  hiopMatrixSparseTriplet.hpp  hiopVector.hpp  hiopVectorPar.hpp  hiopVectorRajaPar.cpp  hiopVectorRajaPar.hpp
src/Optimization/: hiopAlgFilterIPM.cpp  hiopAlgFilterIPM.hpp  hiopIterate.cpp  hiopKKTLinSys.cpp  hiopKKTLinSys.hpp  hiopKKTLinSysDense.hpp  hiopKKTLinSysMDS.cpp  hiopKKTLinSysSparse.cpp  hiopKKTLinSysSparse.hpp  hiopNlpFormulation.cpp  hiopNlpFormulation.hpp  hiopNlpTransforms.hpp
src/Utils/: hiopOptions.cpp
tests/: CMakeLists.txt  testMatrix.cpp  testMatrixSparse.cpp  testMatrixSymSparse.cpp  testVector.cpp
tests/LinAlg/: matrixTestsRajaSparseTriplet.cpp  matrixTestsRajaSparseTriplet.hpp  matrixTestsSparse.hpp  matrixTestsSparseTriplet.cpp  matrixTestsSparseTriplet.hpp  vectorTest.hpp  vectorTests.hpp  vectorTestsPar.cpp  vectorTestsPar.hpp  vectorTestsRajaPar.cpp  vectorTestsRajaPar.hpp
